--- a/WebTechnology/Angular/MyFirstApp/src/app/experienced-faculties/experienced-faculties.component.html
+++ b/WebTechnology/Angular/MyFirstApp/src/app/experienced-faculties/experienced-faculties.component.html
@@ -1,9 +1,9 @@
-<div class="row">
-  <div *ngFor="let fac of faculties">
+<div class="row p-5">
+  <div class="col-3" *ngFor="let fac of faculties; let i = index">
     <div
       *ngIf="experienced(fac.FacultyExperience)"
-      class="card col col-3"
-      style="width: 18rem"
+      class="card col-md-3 my-2 border-danger"
+      style="width: 20rem"
     >
       <img [src]="fac.FacultyImage" class="card-img-top" alt="..." />
       <div class="card-body">
@@ -16,7 +16,6 @@
         <p class="bg-danger text-light">
           Working Since {{ fac.FacultyWorkingSince }}
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
