--- a/WebTechnology/Angular/MyFirstApp/src/app/students/students.component.html
+++ b/WebTechnology/Angular/MyFirstApp/src/app/students/students.component.html
@@ -1,9 +1,5 @@
 <div class="row">
-  <div
-    class="card col-3"
-    *ngFor="let stu of students; let i = index"
-    style="width: 18rem"
-  >
+  <div class="card col-3" *ngFor="let stu of students; let i = index">
     <img [src]="stu.avatar" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">{{ stu.name }}</h5>
