--- a/WebTechnology/Angular/api-project/src/app/student-by-id/student-by-id.component.html
+++ b/WebTechnology/Angular/api-project/src/app/student-by-id/student-by-id.component.html
@@ -1,13 +1,10 @@
-<!-- <div class="row">
-  <div class="card col-3" *ngFor="let stu of students" width="10%">
-    <img [src]="stu.avatar" class="card-img-top" alt="..." />
-    <div class="card-body">
-      <h5 class="card-title">{{ stu.name }}</h5>
-      <h5 class="card-text">City:{{ stu.city }}</h5>
-      <h5 class="card-text">Department:{{ stu.department }}</h5>
-      <h5 class="card-text">Roll No:{{ stu.roll_no }}</h5>
-      <a routerLink="faculty/:id" class="btn btn-primary">Details</a>
-    </div>
+<div class="card col-3" width="10%">
+  <img [src]="data.avatar" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <h5 class="card-title">{{ data.name }}</h5>
+    <h5 class="card-text">City:{{ data.city }}</h5>
+    <h5 class="card-text">Department:{{ data.department }}</h5>
+    <h5 class="card-text">Roll No:{{ data.roll_no }}</h5>
+    <a routerLink="faculty/:id" class="btn btn-primary">Details</a>
   </div>
-</div> -->
-<h1>Stundent by Id works</h1>
+</div>
