--- a/WebTechnology/Angular/api-project/src/app/header/header.component.html
+++ b/WebTechnology/Angular/api-project/src/app/header/header.component.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/students">Students</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/employees">Employees</a>
+      </li>
     </ul>
   </div>
 </nav>
